To do list actualizada con pasqui de coach

--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,14 @@ h1 {
     background-color: #c82333;
 }
 
+.tickBtn {
+    background-color: green;
+}
+
+.tickBtn:hover {
+    background-color:aquamarine;
+}
+
+.tachar {
+text-decoration-line: line-through;
+}
